# voxceleb_trainer

./: .gitignore  concatenate_files.py  download_voxceleb.ipynb  download_voxceleb.py  main.py  pyproject.toml
lists/: fileparts.txt  files.txt
