[project]
name = "voxceleb-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asteroid-filterbanks==0.4.0",
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
    "torch>=1.7.0",
    "torchaudio>=0.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
